k8s/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - image: anzeha/user
          name: user
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
#          livenessProbe:
#            httpGet:
#              path: /health/live
#              port: server
#            initialDelaySeconds: 20
#            periodSeconds: 3
#          readinessProbe:
#            httpGet:
#              path: /health/ready
#              port: server
#            initialDelaySeconds: 20
#            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: ClusterIP
  ports:
    - port: 8081
      protocol: TCP
      targetPort: server
  selector:
    app: user
